--- a/22_Embedded_JavaScript_templates/Todolist_v1_project/views/list.ejs
+++ b/22_Embedded_JavaScript_templates/Todolist_v1_project/views/list.ejs
@@ -1,31 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To DO List</title>
-</head>
-<body>
+<%- include('header'); -%>
 
-    <h1 style="color: blue">Its a <%= kindOfDay %> ToDo List !!!!!!!!!!</h1>
+    <div class="box" id="heading">
+        <h1><%= listTitle %></h1>
+    </div>
 
-    <ul>
-    
+    <div class="box">
+
         <% for (var i = 0; i < newListItems.length; i++){  %>
 
-            <li><%=  newListItems[i]  %></li>
+            <div class="item">
 
+                <input type="checkbox">
+
+                <p><%=  newListItems[i]  %></p>
+
+            </div>
         <% }  %>
 
-    </ul>
 
-    <form class="" action="/" method="post">
+        <form class="item" action="/" method="post">
     
-    <input type="text" name="newItem">
-
-    <button type="submit" name="button">Add</button>
-    
-    </form>
+            <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+        
+            <button type="submit" name="list" value=<%= listTitle %>>+</button>
+            
+            </form>
+    </div>
        
-</body>
-</html>
+    <%- include('footer'); -%>
